[gd_scene load_steps=2 format=3 uid="uid://c3nmpagqy6j02"]

[ext_resource type="Script" path="res://scripts/ui/CardDraft.gd" id="1_carddraft"]

[node name="CardDraft" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_carddraft")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 100.0
text = "üèÜ RECOMPENSAS üèÜ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RewardsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 120.0
offset_right = 400.0
offset_bottom = 200.0

[node name="RewardsContainer" type="HBoxContainer" parent="RewardsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="GoldSection" type="VBoxContainer" parent="RewardsPanel/RewardsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldLabel" type="Label" parent="RewardsPanel/RewardsContainer/GoldSection"]
layout_mode = 2
text = "üí∞ +15 moedas"
horizontal_alignment = 1

[node name="XPSection" type="VBoxContainer" parent="RewardsPanel/RewardsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XPLabel" type="Label" parent="RewardsPanel/RewardsContainer/XPSection"]
layout_mode = 2
text = "‚ú® +20 XP"
horizontal_alignment = 1

[node name="CardDraftPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -150.0
offset_right = 500.0
offset_bottom = 200.0

[node name="DraftContainer" type="VBoxContainer" parent="CardDraftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="DraftTitle" type="Label" parent="CardDraftPanel/DraftContainer"]
layout_mode = 2
text = "Escolha uma carta para adicionar ao seu deck:"
horizontal_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="CardDraftPanel/DraftContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SkipSection" type="VBoxContainer" parent="CardDraftPanel/DraftContainer"]
layout_mode = 2

[node name="SkipButton" type="Button" parent="CardDraftPanel/DraftContainer/SkipSection"]
layout_mode = 2
text = "‚ùå Pular (n√£o adicionar carta)"
custom_minimum_size = Vector2(200, 40)

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
text = "‚û°Ô∏è CONTINUAR"